--- a/AccountService/docker-compose.yml
+++ b/AccountService/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - POSTGRES_DB=${DB_NAME}
       - DATABASE_HOST=${DB_HOST}
       - DATABASE_PORT=${DB_PORT}
+      - DATABASE_URL=${DB_URL}
     tty: true
     build: .
     ports:
