--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,16 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  DATABASE_HOST: ${{ vars.DATABASE_HOST }}
+  DATABASE_DRIVER: ${{ vars.DATABASE_DRIVER }}
+  POSTGRES_USER: ${{ vars.POSTGRES_USER }}
+  POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+  POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+  POSTGRES_PORT: ${{ vars.POSTGRES_PORT }}
+  DATABASE_URL: ${{ secrets.DATABASE_URL }}
+  TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
