--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ env:
   POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
   DATABASE_URL: ${{ secrets.DATABASE_URL }}
   TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
+  SMTP_USERNAME: ${{ vars.SMTP_USERNAME }}
+  SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
 
 jobs:
   build:
@@ -40,6 +42,8 @@ jobs:
         echo POSTGRES_PORT=${{ vars.POSTGRES_PORT }} >> .env
         echo DATABASE_URL=${{ secrets.DATABASE_URL }} >> .env
         echo TEST_DATABASE_URL=${{ secrets.TEST_DATABASE_URL }} >> .env
+        echo SMTP_USERNAME: ${{ vars.SMTP_USERNAME }} >> .env
+        echo SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }} >> .env
         set -a
         source .env
         set +a
