--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,10 @@ services:
       - '5432:5432'
     volumes:
       - ./db/sql/databases.sql:/docker-entrypoint-initdb.d/1.databases.sql
+
+  mailhog:
+    image: mailhog/mailhog:latest
+    restart: always
+    ports:
+      - 1025:1025
+      - 8025:8025
