--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,5 @@
-api.dialedin.com {
-    reverse-proxy api:3000 {
-        header_down Strict-Transport-Security max-age=31536000;
+dialedincafe.com {
+    reverse_proxy api:3000 {
+        header_down Strict-Transport-Security "max-age=31536000"
     }
 }
