--- a/production-compose.yml
+++ b/production-compose.yml
@@ -42,10 +42,12 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - $PWD/Caddyfile:etc/caddy/Caddyfile
+      - $PWD/Caddyfile:/etc/caddy/Caddyfile
       - $PWD/site:/srv
       - caddy_data:/data
       - caddy_config:/config
 
 volumes:
   pgdata:
+  caddy_data:
+  caddy_config:
