--- a/production-compose.yml
+++ b/production-compose.yml
@@ -17,8 +17,8 @@ services:
       dockerfile: Dockerfile
       target: prod
     restart: on-failure
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     command: ["/app/bin/api", "-metrics=true", "-env=production"]
     volumes:
       - .:/app
@@ -36,8 +36,8 @@ services:
       - POSTGRES_PORT=${POSTGRES_PORT}
       - POSTGRES_DB=${POSTGRES_DB}
       - DATABASE_HOST=${DATABASE_HOST}
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - ./db/sql/databases.sql:/docker-entrypoint-initdb.d/1.databases.sql
       - pgdata:/var/lib/postgresql/data
