--- a/Caddyfile
+++ b/Caddyfile
@@ -1,4 +1,9 @@
+{
+    email hunterrrisatratar@gmail.com
+}
+
 dialedincafe.com {
+    response /debug/* "Not Permitted" 403
     reverse_proxy web:3000 {
         header_down Strict-Transport-Security "max-age=31536000"
     }
