--- a/Caddyfile
+++ b/Caddyfile
@@ -7,4 +7,7 @@ dialedincafe.com {
     reverse_proxy web:3000 {
         header_down Strict-Transport-Security "max-age=31536000"
     }
+    log {
+      output stdout
+    }
 }
