Resetting and removing tty

--- a/production-compose.yml
+++ b/production-compose.yml
@@ -11,16 +11,13 @@ services:
       - TEST_DATABASE_URL=${TEST_DATABASE_URL}
       - SMTP_USERNAME=${SMTP_USERNAME}
       - SMTP_PASSWORD=${SMTP_PASSWORD}
-    tty: true
     build:
       context: .
       dockerfile: Dockerfile
       target: prod
     restart: on-failure
-    ports:
-      - "3000:3000"
-#    expose:
-#      - "3000"
+    expose:
+      - "3000"
     command: ["/app/bin/api", "-metrics=true", "-env=production"]
     volumes:
       - .:/app
