--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,6 +25,31 @@ jobs:
       - name: Create empty .env for Make
         run: touch .env
 
+
+      - name: Log in to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+
+      - name: Build Docker image
+        run: |
+          docker build \
+            --platform linux/amd64 \
+            -f Dockerfile \
+            -t ghcr.io/${{ github.repository }}/backend:${{ github.event.inputs.tag || github.event.release.tag_name }} \
+            -t ghcr.io/${{ github.repository }}/backend:latest \
+            .
+
+
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/${{ github.repository }}/backend:${{ github.event.inputs.tag || github.event.release.tag_name }}
+          docker push ghcr.io/${{ github.repository }}/backend:latest
+
+
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.7.0
         with:
@@ -32,6 +57,7 @@ jobs:
 
       - name: Add known hosts
         run: ssh-keyscan -H ${{ secrets.PROD_HOST }} >> ~/.ssh/known_hosts
+
 
       - name: Deploy to Production
         env:
