--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,52 +3,25 @@ name: Dialed-In-Backend-CD
 on:
   workflow_dispatch:
     inputs:
-      tag:
-        description: "Release tag to deploy (e.g. v1.0.0)"
+      branch:
+        description: "Which branch should be deployed?"
         required: true
-
-  release:
-    types: [published]
+        default: "main"
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: Dialed-In-Backend-CD
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          ref: ${{ github.event.inputs.tag || github.event.release.tag_name }}
+          ref: ${{ github.event.inputs.branch }}
 
-      - name: Create empty .env for Make
+      # Create a dummy .env so Makefile doesn’t choke
+      - name: Create empty .env
         run: touch .env
-
-
-      - name: Log in to GHCR
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: Build Docker image
-        run: |
-          docker build \
-            --platform linux/amd64 \
-            -f Dockerfile \
-            -t ghcr.io/${{ github.repository }}/backend:${{ github.event.inputs.tag || github.event.release.tag_name }} \
-            -t ghcr.io/${{ github.repository }}/backend:latest \
-            .
-
-
-      - name: Push Docker image
-        run: |
-          docker push ghcr.io/${{ github.repository }}/backend:${{ github.event.inputs.tag || github.event.release.tag_name }}
-          docker push ghcr.io/${{ github.repository }}/backend:latest
-
 
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.7.0
@@ -57,7 +30,6 @@ jobs:
 
       - name: Add known hosts
         run: ssh-keyscan -H ${{ secrets.PROD_HOST }} >> ~/.ssh/known_hosts
-
 
       - name: Deploy to Production
         env:
