accidentally deleted environment

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    environment: Dialed-In-Backend-CD
 
     steps:
       - name: Checkout code
