--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,6 +24,28 @@ jobs:
       - name: Create empty .env
         run: touch .env
 
+      - name: Log in to GHCR
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+
+      - name: Build Docker image
+        run: |
+          docker build \
+            --platform linux/amd64 \
+            -f Dockerfile \
+            -t ghcr.io/${{ github.repository }}/backend:${{ github.event.inputs.tag || github.event.release.tag_name }} \
+            -t ghcr.io/${{ github.repository }}/backend:latest \
+            .
+
+      - name: Push Docker image
+        run: |
+          docker push ghcr.io/${{ github.repository }}/backend:${{ github.event.inputs.tag || github.event.release.tag_name }}
+          docker push ghcr.io/${{ github.repository }}/backend:latest
+
       - name: Install SSH key
         uses: webfactory/ssh-agent@v0.7.0
         with:
