--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -8,6 +8,10 @@ on:
         required: true
         default: "main"
 
+permissions:
+  contents: read
+  packages: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -34,7 +38,8 @@ jobs:
 
       # Build the lowercase repo name
       - name: Compute lowercase image name
-        run: echo "IMAGE_NAME=ghcr.io/${GITHUB_REPOSITORY,,}/backend" >> $GITHUB_ENV
+        run: echo "IMAGE_NAME=ghcr.io/${GITHUB_REPOSITORY_OWNER,,}/dialed-in-backend" >> $GITHUB_ENV
+
 
       - name: Log in to GHCR
         uses: docker/login-action@v2
