--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,8 @@ env:
   TEST_DATABASE_URL: ${{ secrets.TEST_DATABASE_URL }}
   SMTP_USERNAME: ${{ vars.SMTP_USERNAME }}
   SMTP_PASSWORD: ${{ secrets.SMTP_PASSWORD }}
+  SMTP_HOST: ${{ secrets.SMTP_HOST }}
+  SMTP_PORT: ${{ secrets.SMTP_PORT }}
   S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
   S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
   S3_BUCKET: ${{ vars.S3_BUCKET }}
@@ -47,6 +49,8 @@ jobs:
         echo TEST_DATABASE_URL=${{ secrets.TEST_DATABASE_URL }} >> .env
         echo SMTP_USERNAME=${{ vars.SMTP_USERNAME }} >> .env
         echo SMTP_PASSWORD=${{ secrets.SMTP_PASSWORD }} >> .env
+        echo SMTP_HOST=${{ secrets.SMTP_HOST }} >> .env
+        echo SMTP_PORT=${{ secrets.SMTP_PORT }} >> .env
         echo S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }} >> .env
         echo S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }} >> .env
         echo S3_BUCKET=${{ vars.S3_BUCKET }} >> .env
